--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -20,7 +20,10 @@
 .btn-appointment{
     color:#fff;
     padding: 2%; 
-    background-image: linear-gradient(to bottom right,#62f0e9, #0fb39d);
+    background-image: linear-gradient(75deg,#19d3AE, #0fcfce);
+    text-transform: uppercase;
+    border-color: transparent;
+    font-weight: 600;
 } 
 .primary-color{
     color: #1CC7C1;
